# parakeet

./: .ghci  .gitignore  README.md  commit  index.html  main.tex  obtuse-parakeet.cabal  out.js  parakeet.cabal  stack-ghcjs.yaml  template.html  template.tex
exe/: Main.hs
exe/System/IO/: UTF8.hs
js/: lib.js  out.js  rts.js
jsexe/: Main.hs  frontend
res/: hiragana.html.txt
src/: ArticleDoc.hs  Doc.hs  Element.hs  Eval.hs  FuzzyChar.hs  IO.hs  JPChar.hs  JPToken.hs  Main.hs  Options.hs  Parakeet.hs  Parser.hs  Print.hs  Render.hs  Template.hs  TexDoc.hs  TexElem.hs  UTF8File.hs  UTF8IO.hs
src/Control/Monad/: Choice.hs  Extra.hs  Parakeet.hs
src/Data/Char/: Extra.hs  Fuzzy.hs
src/Data/List/: Extra.hs
src/Linguistics/: Hiragana.hs  Internal.hs  Katakana.hs  Lexeme.hs  Misc.hs  Romaji.hs
src/Monad/: Choice.hs  Parakeet.hs
src/Parakeet/: Options.hs  Parakeet.hs
src/Parakeet/Linguistics/: Hiragana.hs  Internal.hs  Katakana.hs  Lexeme.hs  Misc.hs  RawData.hs  Romaji.hs
src/Parakeet/Parser/: FlatToken.hs  FuzzyChar.hs  MetaInfo.hs  Parser.hs  Stage0.hs  Stage1.hs  Stage2.hs  TeX.hs  Token.hs  WithLine.hs
src/Parakeet/Printer/: HTML.hs  TeX.hs
src/Parakeet/Translator/: Intermediate.hs  Tex.hs
src/Parakeet/Types/: Document.hs  FToken.hs  FlatToken.hs  Lexeme.hs  Meta.hs  MetaInfo.hs  Options.hs  Token.hs  Token2.hs
src/Parser/: FlatToken.hs  FuzzyChar.hs  MetaInfo.hs  Parser.hs  Stage0.hs  Stage1.hs  Stage2.hs  Token.hs
src/Text/: Parakeet.hs  QuasiEmbedFile.hs  TemplateParser.hs
src/Text/Parsec/: Extra.hs
src/Token/: Compound.hs  Hiragana.hs  Internal.hs  Katakana.hs  Misc.hs  Romaji.hs  Token.hs
src/Translator/: Intermediate.hs  Tex.hs
src/helper/: Parse.hs  katakana.html
test/: Main.hs  bufferfly.r
test-expect/: Anonymous.tex.expect  Butter-fly.tex.expect  Nagori-yuki.tex.expect
test-suite/Anonymous/: Anonymous.j  Anonymous.r
test-suite/Butter-fly/: Butter-fly.r
test-suite/Nada-sousou/: Nada-sousou.j  Nada-sousou.r
test-suite/Nagori-yuki/: Nagori-yuki.j
test-suite/Natsu-yuuzora/: Natsu-yuuzora.j  Natsu-yuuzora.r
test-suite/Typhoon/: Typhoon.j
test-suite/Yuki-no-hana/: Yuki-no-hana.j  Yuki-no-hana.r
test/System/IO/: UTF8.hs
tests/Anonymous/: Anonymous.j  Anonymous.r
tests/Butter-fly/: Butter-fly.j  Butter-fly.r
tests/Nagori-yuki/: Nagori-yuki.j  Nagori-yuki.r
tests/Natsu-yuuzora/: Natsu-yuuzora.j  Natsu-yuuzora.r
tests/Typhoon/: Typhoon.j  Typhoon.r
tests/Yuki-no-hana/: Yuki-no-hana.j
utils/: .gitignore  Parse.hs
