name:                parakeet
version:             0.1.0.0
synopsis:            Hepburn Romaji + Japanese lexical analysis & formatting.
homepage:            https://github.com/foreverbell/parakeet
license:             MIT
license-file:        LICENSE
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.10.2, GHC==7.10.3
extra-source-files:
  LICENSE
  README.md
  test-suite/
  test-expect/

source-repository head
  type:     git
  location: https://github.com/foreverbell/parakeet

library 
  ghc-options:         -O2 -W -fwarn-tabs
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings, 
                       QuasiQuotes, 
                       ExistentialQuantification, 
                       GeneralizedNewtypeDeriving,
                       FlexibleInstances,
                       UndecidableInstances
  exposed-modules:
    Text.Parakeet
  other-modules:       
    Control.Monad.Choice
    Control.Monad.Extra
    Control.Monad.Parakeet
    Data.Char.Extra
    Data.Char.Fuzzy
    Data.List.Extra
    Parakeet.Linguistics.Hiragana
    Parakeet.Linguistics.Internal
    Parakeet.Linguistics.Katakana
    Parakeet.Linguistics.Misc
    Parakeet.Linguistics.Romaji
    Parakeet.Parakeet
    Parakeet.Parser.Parser
    Parakeet.Parser.Stage0
    Parakeet.Parser.Stage1
    Parakeet.Parser.Stage2
    Parakeet.Translator.Intermediate
    Parakeet.Translator.Tex
    Parakeet.Types.FlatToken
    Parakeet.Types.Lexeme
    Parakeet.Types.Meta
    Parakeet.Types.Options
    Parakeet.Types.Token
  build-depends: 
    base           == 4.8.*,
    text           == 1.2.*, 
    containers     == 0.5.*, 
    parsec         == 3.1.*,
    raw-strings-qq >= 1.0  && < 1.2,
    mtl            >= 2.2.1
  default-language:    Haskell2010

executable parakeet
  ghc-options:         -O2 -W -fwarn-tabs
  default-language:    Haskell2010
  main-is:             Main.hs
  if impl(ghcjs)
    hs-source-dirs:      jsexe
    build-depends:       base, ghcjs-base, parakeet
    other-extensions:    JavaScriptFFI, 
                         OverloadedStrings
 else
    hs-source-dirs:      exe
    build-depends:       base, text, parakeet
    other-modules:
      System.IO.UTF8

test-suite parakeet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base, text, HUnit, parakeet
  other-modules:
    System.IO.UTF8
  ghc-options:         -W -fwarn-tabs
  default-language:    Haskell2010
